[gd_scene load_steps=6 format=2]

[ext_resource path="res://HUDBureau.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/backgrounds/scene_bureau_vide.png" type="Texture" id=2]
[ext_resource path="res://assets/backgrounds/bureau_ordil.png" type="Texture" id=3]
[ext_resource path="res://Office.gd" type="Script" id=4]
[ext_resource path="res://assets/light.png" type="Texture" id=5]

[node name="Office" type="Node2D"]
script = ExtResource( 4 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="Alien" type="Sprite" parent="."]

[node name="Desk" type="Sprite" parent="."]
texture = ExtResource( 3 )
centered = false

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.27451, 0.27451, 0.27451, 1 )

[node name="LightLeft" type="Light2D" parent="."]
texture = ExtResource( 5 )
texture_scale = 2.0
energy = 1.2

[node name="LightRight" type="Light2D" parent="."]
position = Vector2( 934.447, 173.752 )
texture = ExtResource( 5 )
texture_scale = 2.0
color = Color( 0.568627, 0.627451, 0.894118, 1 )
energy = 0.9

[node name="HUDLayer" type="CanvasLayer" parent="."]

[node name="HUDOffice" parent="HUDLayer" instance=ExtResource( 1 )]
[connection signal="see_mission" from="HUDLayer/HUDOffice" to="." method="_on_HUDOffice_see_mission"]
[connection signal="see_missionIntro" from="HUDLayer/HUDOffice" to="." method="_on_HUDOffice_see_missionIntro"]
[connection signal="see_system" from="HUDLayer/HUDOffice" to="." method="_on_HUDOffice_see_system"]
